--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pdf_button {
+  background-color: #357edd;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  padding: 8px;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pdf_container {
+  border: 1px solid rgba(0, 0, 0, .3);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100%;
+}
+
+.pdf_inner_container {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #eee;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  display: flex;
+  padding: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.pdf_content {
+  flex: 1;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rpv-core__page-layer {
+  padding: 20px;
+  margin: 0 auto;
+}
+
+.rpv-core__canvas-layer {
+  border: 1px solid #000;
+}
+
+.rpv-core__inner-page {
+  overflow: hidden;
 }
