--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .container {
+  padding: 10px;
   display: flex;
-  height: 100vh;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -15,36 +16,32 @@
   text-decoration: none;
 }
 
-.pdf_container {
-  border: 1px solid rgba(0, 0, 0, .3);
+.pdf_container .react-pdf__Document {
   display: flex;
   flex-direction: column;
-  height: 100%;
-}
-
-.pdf_inner_container {
-  justify-content: center;
   align-items: center;
-  background-color: #eee;
-  border-bottom: 1px solid rgba(0, 0, 0, .1);
-  display: flex;
-  padding: 4px;
 }
 
-.pdf_content {
-  flex: 1;
-  overflow: hidden;
+.pdf_container .react-pdf__Page {
+  max-width: calc(100% - 2em);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  margin: 1em;
 }
 
-.rpv-core__page-layer {
+.pdf_container .react-pdf__Page canvas {
+  max-width: 100%;
+  height: auto !important;
+}
+
+.pdf_container .react-pdf__message {
   padding: 20px;
-  margin: 0 auto;
+  color: white;
 }
 
-.rpv-core__canvas-layer {
-  border: 1px solid #000;
+.textLayer {
+  display: none;
 }
 
-.rpv-core__inner-page {
-  overflow: hidden;
+.annotationLayer {
+  display: none;
 }
